Changed navigation bar

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -94,6 +94,9 @@
     "notifications": "Notifications"
   },
   "navigation": {
+    "loginLogout" : "Login / Logout",
+    "logout": "Logout",
+    "login": "Login",
     "home": "Home",
     "dashboard": "Dashboard",
     "training": "Training",
